<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">长安宝藏</string>
    <string name="neteraxe">Neteraxe</string>
    <string name="developer">开发者</string>
    <string name="update_diary">更新日志</string>
    <string name="_5">赏5星好评</string>
    <string name="blog">工程</string>
    <string name="Blog">HiddenTale</string>
    <string name="contract_us">联系我们</string>
    <string name="neteraxe_126_com">neteraxe@126.com</string>
    <string name="QR_download">扫一扫二维码 下载长安宝藏</string>
    <string name="nav_header_subtitle">A real true will be told……</string>
    <string name="explorer">探索</string>
    <string name="find">发现</string>
    <string name="setting">设置</string>
    <string name="nav_skin">皮肤</string>
    <string name="share">分享</string>
    <string name="share_app">我发现了一款开源地图软件，叫长安宝藏，快去GitHub上看看吧~</string>
    <string name="about">关于</string>
    <string name="RESTORE_DEFAULT">恢复默认</string>
    <string name="cache">缓存</string>
    <string name="preload">预加载</string>
    <string name="sound">声音</string>
    <string name="vibration">振动</string>
    <string name="_22_00_6_00">夜间免打扰(22:00–6:00)</string>
    <string name="TEST_MODE">测试模式</string>
    <string name="FIRST_LAUNCHER">第一次启动应用</string>
    <string name="DISPLAY_SPLASH">显示启动“长安宝藏”界面</string>
    <string name="PERSONAL_SETTINGS">个人设置</string>
    <string name="ABOUT_APP">关于应用</string>
    <string name="EXIT_APP">退出应用</string>
    <string name="loading">正在加载……</string>
</resources>