<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity_page"
    android:background="@drawable/texture3">

    <RelativeLayout
        android:id="@+id/settingFragment"
        style="@style/topbar_bg"
        android:background="@drawable/texture2">

        <ImageButton
            style="@style/topbar_return_img"
            tools:ignore="ContentDescription"
            android:onClick="finish"
            />

        <TextView
            style="@style/topbar_title"
            android:layout_centerHorizontal="true"
            android:text="@string/setting"
            />

        <Button
            style="@style/topbar_right_btn"
            android:text="@string/RESTORE_DEFAULT"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvSettingContactSettingRemind"
        style="@style/text_small"
        android:layout_width="match_parent"
        android:background="@color/alpha_3"
        android:gravity="center"
        android:padding="@dimen/item_left_tv_padding"
        android:visibility="gone"
        />

    <ScrollView
        android:id="@id/setting"
        style="@style/match_match"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llSettingAppSettingContainer"
                style="@style/ll_vertical_match_wrap">

                <LinearLayout
                    android:id="@id/setting"
                    style="@style/content_item_white"
                    android:layout_marginTop="@dimen/item_distance"
                    android:background="@drawable/texture3"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        style="@style/content_item_lf_tv"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/cache"
                        />

                    <ImageView
                        android:id="@+id/ivSettingCache"
                        style="@style/content_item_rt_img"
                        android:paddingEnd="@dimen/item_padding_right"
                        app:srcCompat="@drawable/on"
                        tools:ignore="ContentDescription,RtlSymmetry" />
                </LinearLayout>

                <View style="@style/divider_horizontal_1px" />

                <LinearLayout
                    android:id="@id/setting"
                    style="@style/content_item_white"
                    android:background="@drawable/texture3">

                    <TextView
                        style="@style/content_item_lf_tv"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/preload"
                        />

                    <ImageView
                        android:id="@+id/ivSettingPreload"
                        style="@style/content_item_rt_img"
                        android:paddingEnd="@dimen/item_padding_right"
                        app:srcCompat="@drawable/on"
                        tools:ignore="ContentDescription,RtlSymmetry" />
                </LinearLayout>

                <View
                    style="@style/divider_horizontal_1px"
                    android:layout_marginBottom="@dimen/item_distance" />

                <LinearLayout
                    android:id="@id/setting"
                    style="@style/content_item_white"
                    android:background="@drawable/texture3">

                    <TextView
                        style="@style/content_item_lf_tv"
                        android:layout_weight="1"
                        android:text="@string/sound"
                        android:layout_width="0dp"
                        />

                    <ImageView
                        android:id="@+id/ivSettingVoice"
                        style="@style/content_item_rt_img"
                        android:paddingEnd="@dimen/item_padding_right"
                        app:srcCompat="@drawable/off"
                        tools:ignore="ContentDescription,RtlSymmetry" />
                </LinearLayout>

                <View style="@style/divider_horizontal_1px" />

                <LinearLayout
                    android:id="@id/setting"
                    style="@style/content_item_white"
                    android:background="@drawable/texture3">

                    <TextView
                        style="@style/content_item_lf_tv"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/vibration"
                        />

                    <ImageView
                        android:id="@+id/ivSettingVibrate"
                        style="@style/content_item_rt_img"
                        android:paddingEnd="@dimen/item_padding_right"
                        app:srcCompat="@drawable/on"
                        tools:ignore="ContentDescription,RtlSymmetry" />
                </LinearLayout>

                <View style="@style/divider_horizontal_1px" />

                <LinearLayout
                    android:id="@id/setting"
                    style="@style/content_item_white"
                    android:background="@drawable/texture3">

                    <TextView
                        style="@style/content_item_lf_tv"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/_22_00_6_00"
                        />

                    <ImageView
                        android:id="@+id/ivSettingNoDisturb"
                        style="@style/content_item_rt_img"
                        android:paddingEnd="@dimen/item_padding_right"
                        app:srcCompat="@drawable/on"
                        tools:ignore="ContentDescription,RtlSymmetry" />
                </LinearLayout>

                <View
                    android:id="@id/setting"
                    style="@style/divider_horizontal_1px"
                    android:layout_marginBottom="@dimen/item_distance" />

                <LinearLayout
                    android:id="@id/setting"
                    style="@style/content_item_white"
                    android:background="@drawable/texture3">

                    <TextView
                        style="@style/content_item_lf_tv"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/TEST_MODE"
                        />

                    <ImageView
                        android:id="@+id/ivSettingTestMode"
                        style="@style/content_item_rt_img"
                        android:paddingEnd="@dimen/item_padding_right"
                        app:srcCompat="@drawable/off"
                        tools:ignore="ContentDescription,RtlSymmetry" />
                </LinearLayout>

                <View style="@style/divider_horizontal_1px" />

                <LinearLayout
                    android:id="@id/setting"
                    style="@style/content_item_white"
                    android:background="@drawable/texture3">

                    <TextView
                        style="@style/content_item_lf_tv"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/FIRST_LAUNCHER"
                        />

                    <ImageView
                        android:id="@+id/ivSettingFirstStart"
                        style="@style/content_item_rt_img"
                        android:paddingEnd="@dimen/item_padding_right"
                        app:srcCompat="@drawable/off"
                        tools:ignore="ContentDescription,RtlSymmetry" />
                </LinearLayout>

                <View style="@style/divider_horizontal_1px" />

                <LinearLayout
                    android:id="@id/setting"
                    style="@style/content_item_white"
                    android:background="@drawable/texture3">

                    <TextView
                        style="@style/content_item_lf_tv"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/DISPLAY_SPLASH"
                        />

                    <ImageView
                        android:id="@+id/ivSettingDirect"
                        style="@style/content_item_rt_img"
                        android:paddingEnd="@dimen/item_padding_right"
                        app:srcCompat="@drawable/off"
                        tools:ignore="ContentDescription,RtlSymmetry" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>