<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity_page"
    android:baselineAligned="false"
    android:id="@+id/setting"
    android:background="@drawable/texture3">

    <ScrollView
        style="@style/ll_vertical_match_match"
        tools:ignore="InefficientWeight"
        >

        <LinearLayout style="@style/ll_vertical_match_match"
            android:id="@+id/settingChoice"
            >

            <ImageView
                android:id="@+id/ivSettingHead"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="@dimen/item_distance"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_launcher"
                tools:ignore="ContentDescription" />

            <View
                style="@style/divider_horizontal_1px"
                android:layout_marginTop="30dp" />

            <LinearLayout
                android:id="@+id/llSettingSetting"
                style="@style/content_item_white"
                tools:ignore="UseCompoundDrawables"
                android:background="@drawable/texture3">

                <TextView
                    style="@style/content_item_lf_tv"
                    android:layout_weight="1"
                    android:text="@string/PERSONAL_SETTINGS"
                    />

                <ImageView style="@style/content_item_rt_img"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <View style="@style/divider_horizontal_1px" />

            <LinearLayout
                android:id="@+id/llSettingAbout"
                style="@style/content_item_white"
                android:background="@drawable/texture3">

                <TextView
                    style="@style/content_item_lf_tv"
                    android:layout_weight="1"
                    android:text="@string/ABOUT_APP"
                    />

                <ImageView style="@style/content_item_rt_img"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <View style="@style/divider_horizontal_1px" />

            <LinearLayout
                android:id="@+id/llSettingLogout"
                style="@style/content_item_white"
                android:background="@drawable/texture3">

                <TextView
                    style="@style/content_item_lf_tv"
                    android:layout_weight="1"
                    android:text="@string/EXIT_APP"
                    />

                <ImageView style="@style/content_item_rt_img"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <View style="@style/divider_horizontal_1px" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>